syntax = "proto3";

package tempo;

option go_package = "tempo-grpc/go/gen;tempo";

// Service which streams transactions from decoded shreds.
// May be unordered.
service TransactionStream {
    rpc OpenTransactionStream (StartStream) returns (stream Transaction);
    rpc OpenTransactionStreamV2 (StartStreamV2) returns (stream Transaction);
}

// Client sends this message to start the transaction stream,
// if the auth token is valid
message StartStream {
    string auth_token = 1; // Authentication token
}

message StartStreamV2 {
    string auth_token = 1; // Authentication token
    repeated bytes static_account_filter = 2; // Static account filters
}

// Transaction which was read from shreds.
message Transaction {
    uint64 slot   = 1;      // Slot for shred in which the transaction was found
    uint64 index  = 2;      // Transaction index within the slot/block
    bytes payload = 3;      // Variable-length binary payload
}